sql/handler.cc
@@ -222,11 +222,9 @@ bool ha_caching_allowed(THD* thd, char* table_key,
 {
 #ifdef HAVE_INNOBASE_DB
   if (cache_type == HA_CACHE_TBL_ASKTRANSACT)
-    return innobase_query_caching_of_table_permitted(thd, table_key,
-                                                     key_length);
-  else
+    return innobase_query_caching_of_table_permitted(thd, table_key, key_length);
 #endif
-    return 1;
+  return 1;
 }
 
 int ha_init()
